--- a/index.html
+++ b/index.html
@@ -12,6 +12,76 @@
 </head>
 <body>
     <div class="container">
+        <nav class="global-nav">
+            <div class="global-nav-links">
+                <a href="#" class="global-nav-item">Rooms</a>
+                <a href="#" class="global-nav-item">Ideas</a>
+                <a href="#" class="global-nav-item">Stores</a>
+                <a href="#" class="global-nav-item">Contact</a>
+            </div>
+        </nav>
+        <nav class="local-nav">
+            <div class="local-nav-links">
+                <a href="#" class="product-name">AirMug Pro</a>
+                <a href="#">개요</a>
+                <a href="#">제품사양</a>
+                <a href="#">구입하기</a>
+            </div>
+        </nav>
+        <section class="scroll-section" id="scroll-section-0">
+            <h1>AirMug Pro</h1>
+            <div class="sticky-elem main-message">
+                <p>온전히 빠져들게 하는 <br>최고급 세라믹</p>
+            </div>
+            <div class="sticky-elem main-message">
+                <p>주변 맛을 느끼게 해주는 <br>주변 맛 허용 모드</p>
+            </div>
+            <div class="sticky-elem main-message">
+                <p>온종일 편안한 <br>맞춤형 손잡이</p>
+            </div>
+            <div class="sticky-elem main-message">
+                <p>새롭게 입가를 <br>찾아온 매혹</p>
+            </div>
+        </section>
+        <section class="scroll-section" id="scroll-section-1">
+            <p class="description">
+                <strong>보통 스크롤 영역</strong>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod voluptas sunt illo veniam suscipit minus, libero earum nam tempore. Adipisci, molestias doloribus magnam repellat aspernatur id repellendus veritatis architecto ipsa sed numquam obcaecati, explicabo ullam praesentium porro corrupti, corporis eligendi temporibus. Quibusdam pariatur ea aliquid, eos laudantium, odit voluptates hic molestiae doloribus porro nesciunt? Cupiditate dolorum veritatis ipsam delectus voluptates officia nisi. Quod quis iure ducimus quidem maiores, voluptatum minima delectus illo molestias, porro animi adipisci? Cupiditate quibusdam consequuntur necessitatibus autem impedit, labore blanditiis laborum nobis eius vero saepe totam quasi eos voluptatum ex accusantium explicabo illum, sit aliquam quisquam odio a beatae! Tenetur alias quidem soluta dicta sapiente aliquid, ullam voluptatum quam dolore cumque earum eos quod saepe beatae totam maxime natus quaerat recusandae molestias deleniti placeat enim nobis? Voluptates quis, ex illo iure odio blanditiis libero non tempore nemo? Et placeat odio sapiente expedita eligendi modi quibusdam ullam in, doloribus, suscipit veniam, earum minus. Sunt ipsa sequi aut. Soluta laborum eligendi quod hic nulla blanditiis cum velit ducimus dolores et porro voluptatum eum dolorem illum, quaerat quisquam inventore iure? Repudiandae, impedit dignissimos. Enim cum, deleniti voluptatum repellat sequi eius rem nihil officiis adipisci asperiores rerum. Possimus, eius ex.
+            </p>
+        </section>
+        <section class="scroll-section" id="scroll-section-2">
+            <div class="sticty-elem main-message">
+                <p>
+                    <small>편안한 촉감</small>
+                    입과 하나 되다
+                </p>
+            </div>
+            <div class="sticky-elem desc-message">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt quidem voluptas explicabo sit porro unde eaque deserunt, voluptates deleniti neque esse laborum magni fugit asperiores nesciunt architecto enim ducimus aperiam iure quaerat alias dolore.
+                </p>
+                <div class="pin"></div>
+            </div>
+            <div class="sticky-elem desc-message">
+                <p>
+                    디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이디
+                </p>
+                <div class="pin"></div>
+            </div>
+        </section>
+        <section class="scroll-section" id="scroll-section-3">
+            <p class="mid-message">
+                <strong>Retina 머그</strong><br>
+                아이디어를 광활하게 펼칠<br>
+                아름답고 부드러운 음료 공간.
+            </p>
+            <p class="canvas-caption">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quaerat quia sapiente ullam hic aliquid laboriosam non quae consectetur soluta eum repudiandae dolores aut nemo reprehenderit provident asperiores ut porro culpa, aperiam doloribus odit eligendi at. Deserunt perspiciatis, eum et autem ut iure, adipisci expedita est debitis corporis dignissimos itaque.                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quaerat quia sapiente ullam hic aliquid laboriosam non quae consectetur soluta eum repudiandae dolores aut nemo reprehenderit provident asperiores ut porro culpa, aperiam doloribus odit eligendi at. Deserunt perspiciatis, eum et autem ut iure, adipisci expedita est debitis corporis dignissimos itaque.
+            </p>
+        </section>
+        <footer class="footer">
+            2021, 김예찬
+        </footer>
     </div>
     <script src="./js/main.js"></script>
 </body>
