text animation finish

--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
             </p>
         </section>
         <section class="scroll-section" id="scroll-section-2">
-            <div class="sticty-elem main-message">
+            <div class="sticky-elem main-message a">
                 <p>
                     <small>편안한 촉감</small>
                     입과 하나 되다
                 </p>
             </div>
-            <div class="sticky-elem desc-message">
+            <div class="sticky-elem desc-message b">
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt quidem voluptas explicabo sit porro unde eaque deserunt, voluptates deleniti neque esse laborum magni fugit asperiores nesciunt architecto enim ducimus aperiam iure quaerat alias dolore.
                 </p>
                 <div class="pin"></div>
             </div>
-            <div class="sticky-elem desc-message">
+            <div class="sticky-elem desc-message c">
                 <p>
                     디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이디
                 </p>
@@ -76,7 +76,7 @@
                 아름답고 부드러운 음료 공간.
             </p>
             <p class="canvas-caption">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quaerat quia sapiente ullam hic aliquid laboriosam non quae consectetur soluta eum repudiandae dolores aut nemo reprehenderit provident asperiores ut porro culpa, aperiam doloribus odit eligendi at. Deserunt perspiciatis, eum et autem ut iure, adipisci expedita est debitis corporis dignissimos itaque.                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quaerat quia sapiente ullam hic aliquid laboriosam non quae consectetur soluta eum repudiandae dolores aut nemo reprehenderit provident asperiores ut porro culpa, aperiam doloribus odit eligendi at. Deserunt perspiciatis, eum et autem ut iure, adipisci expedita est debitis corporis dignissimos itaque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quaerat quia sapiente ullam hic aliquid laboriosam non quae consectetur soluta eum repudiandae dolores aut nemo reprehenderit provident asperiores ut porro culpa, aperiam doloribus odit eligendi at. Deserunt perspiciatis, eum et autem ut iure, adipisci expedita est debitis corporis dignissimos itaque.
             </p>
         </section>
         <footer class="footer">
